--- a/src/app/features/prestamos/regular/pages/seleccionar-recurso/seleccionar-recurso.component.html
+++ b/src/app/features/prestamos/regular/pages/seleccionar-recurso/seleccionar-recurso.component.html
@@ -90,7 +90,7 @@
                   </td>
                   <td class="px-6 py-4">
                     <div class="flex w-80">
-                      {{recurso.descripcion}}
+                      {{recurso.ubicacion}}
                     </div>
                   </td>
                   <td class="px-6 w-1/5 whitespace-nowrap">
